--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "bump-and-release": "yarn test && git pull --rebase origin main && yarn run release-patch",
     "release-patch": "yarn version --patch && git push && git push --tags",
     "dev": "vite",
-    "build": "vite build",
+    "build": "NODE_ENV=production vite build",
     "preview": "vite preview",
     "story:dev": "histoire dev",
-    "story:build": "histoire build && cp 404.html .histoire/dist",
+    "story:build": "NODE_ENV=production histoire build && cp 404.html .histoire/dist",
     "story:preview": "histoire preview"
   },
   "files": [
